--- a/index.html
+++ b/index.html
@@ -5,8 +5,174 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="blank.html">Информация</a></li>
+          <li><a href="blank.html">Фото и видео</a></li>
+        </ul>
+        <a><img src="https://via.placeholder.com/138x70" alt=""></a>
+        <ul>
+          <li><a href="blank.html">Карта штата</a></li>
+          <li><a href="catalog.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Сайт туристического городка в штате Аризона</h1>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+      <section>
+        <h2>
+          Седона — небольшой городок в Аризоне,<br>
+          заслуживающий большего!
+        </h2>
 
+        <ul>
+          <li><img src="https://via.placeholder.com/188x45" alt=""></li>
+          <li><img src="https://via.placeholder.com/256x29" alt=""></li>
+          <li><img src="https://via.placeholder.com/457x213" alt=""></li>
+        </ul>
+
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </section>
+
+      <section>
+        <h2>Описание</h2>
+
+        <div>
+          <h3>Настоящий<br> городок</h3>
+          <p>— №1 —</p>
+          <p>
+            Седона — не аттракцион для туристов, там<br>
+            течёт своя жизнь
+          </p>
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/800x256" alt="">
+        </div>
+        <div>
+          <h3>Жильё</h3>
+          <img src="https://via.placeholder.com/75x72" alt="">
+          <p>
+            Рекомендуем пожить в настоящем<br>
+            мотеле, всё как в кино!
+          </p>
+        </div>
+        <div>
+          <h3>Еда</h3>
+          <img src="https://via.placeholder.com/75x70" alt="">
+          <p>
+            Всегда заказывайте фирменный бургер,<br>
+            вы не разочаруетесь!
+          </p>
+        </div>
+        <div>
+          <h3>Сувениры</h3>
+          <img src="https://via.placeholder.com/64x77" alt="">
+          <p>
+            Не только китайского, но и местного<br>
+            производства!
+          </p>
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/800x256" alt="">
+        </div>
+        <div>
+          <h3>Там есть<br> Мост дьявола</h3>
+          <p>— №2 —</p>
+          <p>
+            Да, по нему можно пройти! Если конечно<br>
+            вы осмелитесь
+          </p>
+        </div>
+        <div>
+          <h3>небольшая<br> площадь</h3>
+          <p>— №3 —</p>
+          <p>
+            все достопримечательности<br>
+            находятся очень близко
+          </p>
+        </div>
+        <div>
+          <h3>красивая<br> дорога</h3>
+          <p>— №4 —</p>
+          <p>
+            ехать в седону из лас-вегаса совсем<br>
+            не скучно!
+          </p>
+        </div>
+        <div>
+          <h3>мало<br> туристов</h3>
+          <p>— №5 —</p>
+          <p>
+            большинство едет в гранд каньон<br>
+            и толпится там
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <h2>Заинтересовались?</h2>
+        <p>
+          Укажите предполагаемые даты поездки,<br>
+          и мы покажем вам лучшие предложения гостиниц в седоне
+        </p>
+        <a href="blank.html">Поиск гостиницы в Седоне</a>
+      </section>
+
+      <section>
+        <h3>Карта</h3>
+        <img src="https://via.placeholder.com/1199x594" alt="">
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h3>Контакты</h3>
+        <p>#visitSEDONA</p>
+        <p><a href="tel:+78005558628">+7 800 555-86-28</a></p>
+      </section>
+
+      <section>
+        <h3>Социальные сети</h3>
+        <ul>
+          <li><a>Твиттер</a></li>
+          <li><a>Фейсбук</a></li>
+          <li><a>Youtube</a></li>
+        </ul>
+      </section>
+
+      <p>Website by <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/115x33" alt=""></a></p>
+    </footer>
+
+    <section>
+      <h3>Поиск гостиницы в Седоне</h3>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <p>
+          <label for="search_check_in">Дата заезда:</label>
+          <input id="search_check_in" type="date" name="date_check_in" value="2017-04-24">
+        </p>
+
+        <p>
+          <label for="search_check_out"></label>
+          <input id="search_check_out" type="date" name="date_check_out" value="2017-07-04">
+        </p>
+
+        <p>
+          <label>Взрослые:</label>
+          <button type="button">-</button>
+          <input type="text" name="number" value="2">
+          <button type="button">+</button>
+        </p>
+
+        <p>
+          <label>Дети:</label>
+          <button type="button">-</button>
+          <input type="text" name="number" value="0">
+          <button type="button">+</button>
+        </p>
+
+        <button type="submit">Найти</button>
+      </form>
+    </section>
   </body>
 </html>
